@@ -1,0 +1,17 @@
+INCLUDES = $(GTK_CFLAGS)
+LDADD = $(GTK_LIBS)
+
+noinst_PROGRAMS = buttonbox
+
+CLEANFILES = engines
+MAINTAINERCLEANFILES = Makefile.in
+
+EXTRA_DIST = \
+	buttonbox.c \
+	buttonbox.gtkrc \
+	images/hbbox-brt.png \
+	images/hbbox.png \
+	images/hbbox-tb.png \
+	images/hbbox-tlb.png \
+	images/hbbox-tlbr.png \
+	run-demo
