@@ -1,0 +1,7 @@
+#!/bin/sh -e
+# Set up the environment so that we can run the demos without having to install
+# the theme engine first. (sapwood-server needs to be already running, though)
+if test ! -L engines; then
+  ln -s ../src/.libs engines
+fi
+PATH=".:$PATH" GTK_PATH="$PWD" exec "$@"
